--- a/sklad/templates/admin/change_form.html
+++ b/sklad/templates/admin/change_form.html
@@ -44,7 +44,8 @@
     </p>
     {{ adminform.form.non_field_errors }}
 {% endif %}
-<div style="width: 240px; background: var(--button-bg);
+    <div style="width: 600px; display: flex; justify-content: space-between">
+        <div style="width: 240px; background: var(--button-bg);
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
@@ -64,6 +65,28 @@
         })();return false;"
 
 >Скачать отчет по инвентаризации</div>
+
+    <div style="width: 240px; background: var(--button-bg);
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    color: var(--button-fg);
+    cursor: pointer;
+    transition: background 0.15s;"
+
+     onClick="(function(){
+            let id = window.location.pathname.split('/')[4];
+            let a = document.createElement('a');
+              a.href = `http://83.222.9.213:7778/api/report2?id=${id}`;
+              //a.href = `http://localhost:8000/api/report?id=${id}`;
+              document.body.appendChild(a);
+              a.click();
+              document.body.removeChild(a);
+            return false;
+        })();return false;"
+
+>Скачать отчет о потреблении</div>
+    </div>
 {% block field_sets %}
 {% for fieldset in adminform %}
   {% include "admin/includes/fieldset.html" %}
